# nudgeai

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yml
src/: config.rs  health.rs  lib.rs  main.rs  prompt.rs  provider.rs  scheduler.rs  state.rs
tests/: cli.rs
